--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to TAB.</title>
-    <link rel="stylesheet" href="C:\Users\tara.brooks\OneDrive - PAE Engineers\Documents\MyCode\Portfolio\Homepage\Reset.css">
-    <link rel="stylesheet" href="C:\Users\tara.brooks\OneDrive - PAE Engineers\Documents\MyCode\Portfolio\My Work\app.css">
+    <link rel="stylesheet" href="Reset.css">
+    <link rel="stylesheet" href="app.css">
     <link rel="stylesheet" href="https://use.typekit.net/sbc2mak.css">
     <link rel="stylesheet" href="S:\GRAPHICS\_Reference\Fonts\Gotham-Font">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -15,7 +15,7 @@
   <!-- <div class="wrapper"> -->
     <nav>
       <a href="C:\Users\tara.brooks\OneDrive - PAE Engineers\Documents\MyCode\Portfolio\Homepage\index.html">
-        <img id="logo" src="C:\Users\tara.brooks\OneDrive - PAE Engineers\Documents\MyCode\Portfolio\Homepage\Assets\Logo-01.png">
+        <img id="logo" src="Assets/Logo-01.png">
         </a>
         <ul id="navlist">
            <li><a class="navLink" href="C:\Users\tara.brooks\OneDrive - PAE Engineers\Documents\MyCode\Portfolio\About Me\index.html">About</a></li>
@@ -32,7 +32,7 @@
           <div id="navigation" class="hidden">
             <div class="nav">
               <ul class="hamburgerList">
-                <li class="hamburgerItem"><a class="hamburgerItem" href="http://google.com" target="_top">About</a></li>
+                <li class="hamburgerItem"><a class="hamburgerItem" href="#">About</a></li>
                 <li class="hamburgerItem"><a class="hamburgerItem" href="#">Design</a></li>
                 <li class="hamburgerItem"><a class="hamburgerItem" href="#">Case Studies</a></li>
                 <li class="hamburgerItem"><a class="hamburgerItem" href="#">Contact</a></li>
@@ -47,7 +47,7 @@
     </div>
 <section class="workGrid">
   <div class="item1">
-    <figure class="green"><img id="raHover" class="gridImage" src="C:\Users\tara.brooks\OneDrive - PAE Engineers\Documents\MyCode\Portfolio\My Work\Assets\free floating iPad Pro with iPhone 12 mockup_homepage image.jpg"></figure>
+    <figure class="green"><img id="raHover" class="gridImage" src="Assets/free floating iPad Pro with iPhone 12 mockup_homepage image.jpg"></figure>
     <span class="inner">
       <span class="projectName">Rabbit Advocates</span>
         <span class="projectDescription">Responsive Website Redesign</span>
@@ -62,7 +62,7 @@
   <!-- </div> -->
   <!-- </div> -->
 <div class="item2">
-  <figure class="orange"><img class="gridImage" src="C:\Users\tara.brooks\OneDrive - PAE Engineers\Documents\MyCode\Portfolio\My Work\Assets\Department of Energy_homepagebutton-01.jpg"></figure>
+  <figure class="orange"><img class="gridImage" src="Assets/Department of Energy_homepagebutton-01.jpg"></figure>
   <span class="inner">
     <span class="projectName">Department of Energy</span>
       <span class="projectDescription">Responsive Website Redesign</span>
@@ -75,7 +75,7 @@
   <!-- <button>Learn More</button> -->
 </div>
 <div class="item3">
-  <figure class="black"><img class="gridImage" src="C:\Users\tara.brooks\OneDrive - PAE Engineers\Documents\MyCode\Portfolio\My Work\Assets\FindFlix-Hero-Image-Mockup.jpg"></figure>
+  <figure class="black"><img class="gridImage" src="Assets/FindFlix-Hero-Image-Mockup.jpg"></figure>
   <span class="inner">
     <span class="projectName">Findflix</span>
       <span class="projectDescription">Mobile App Design</span>
@@ -95,14 +95,14 @@
 </div>
 
   <footer class="footer">
-  <img id="footerlogo" src="C:\Users\tara.brooks\OneDrive - PAE Engineers\Documents\MyCode\Portfolio\Homepage\Assets\Artboard 1.png">
+  <img id="footerlogo" src="Assets/Artboard 1.png">
   <ul id= "footernav">
-     <li class= "footerinline"><img class= "footerinline" src= "C:\Users\tara.brooks\OneDrive - PAE Engineers\Documents\MyCode\Portfolio\Homepage\Assets\LinkedIn.png"></li>
-     <li class= "footerinline"><img class= "footerinline" src= "C:\Users\tara.brooks\OneDrive - PAE Engineers\Documents\MyCode\Portfolio\Homepage\Assets\Facebook.png"></li>
-     <li class= "footerinline"><img class= "footerinline" src= "C:\Users\tara.brooks\OneDrive - PAE Engineers\Documents\MyCode\Portfolio\Homepage\Assets\Instagram.png"></li>
+     <li class= "footerinline"><img class= "footerinline" src= "Assets/LinkedIn.png"></li>
+     <li class= "footerinline"><img class= "footerinline" src= "Assets/Facebook.png"></li>
+     <li class= "footerinline"><img class= "footerinline" src= "Assets/Instagram.png"></li>
   </ul>
 </footer>
-<script src="C:\Users\tara.brooks\OneDrive - PAE Engineers\Documents\MyCode\Portfolio\Homepage\js.js"></script>
+<script src="js.js"></script>
 </body>
 
 </html>
