--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 <body>
   <!-- <div class="wrapper"> -->
     <nav>
-      <a href="C:\Users\tara.brooks\OneDrive - PAE Engineers\Documents\MyCode\Portfolio\Homepage\index.html">
+      <a href="https://taraannbrooks.github.io/Home2/">
         <img id="logo" src="Assets/Logo-01.png">
         </a>
         <ul id="navlist">
-           <li><a class="navLink" href="C:\Users\tara.brooks\OneDrive - PAE Engineers\Documents\MyCode\Portfolio\About Me\index.html">About</a></li>
-           <li><a href="C:\Users\tara.brooks\OneDrive - PAE Engineers\Documents\MyCode\Portfolio\My Work\index.html">Design</li>
-           <li>Case Studies</li>
-           <li><a href="C:\Users\tara.brooks\OneDrive - PAE Engineers\Documents\MyCode\Portfolio\Contact Me\index.html">Contact</a></li>
+           <li><a class="navLink" href="https://taraannbrooks.github.io/Aboutme2/">About</a></li>
+           <li><a href="https://taraannbrooks.github.io/Mywork2/">Design</a></li>
+           <li><a href="https://taraannbrooks.github.io/Mywork2/">Case Studies</a></li>
+           <li><a href="https://taraannbrooks.github.io/Contactme2/">Contact</a></li>
 </ul>
            <div class="menu">
             <span></span>
@@ -32,10 +32,10 @@
           <div id="navigation" class="hidden">
             <div class="nav">
               <ul class="hamburgerList">
-                <li class="hamburgerItem"><a class="hamburgerItem" href="#">About</a></li>
-                <li class="hamburgerItem"><a class="hamburgerItem" href="#">Design</a></li>
-                <li class="hamburgerItem"><a class="hamburgerItem" href="#">Case Studies</a></li>
-                <li class="hamburgerItem"><a class="hamburgerItem" href="#">Contact</a></li>
+                <li class="hamburgerItem"><a class="hamburgerItem" href="https://taraannbrooks.github.io/Aboutme2/">About</a></li>
+                <li class="hamburgerItem"><a class="hamburgerItem" href="https://taraannbrooks.github.io/Mywork2/">Design</a></li>
+                <li class="hamburgerItem"><a class="hamburgerItem" href="https://taraannbrooks.github.io/Mywork2/">Case Studies</a></li>
+                <li class="hamburgerItem"><a class="hamburgerItem" href="https://taraannbrooks.github.io/Contactme2/">Contact</a></li>
               </ul>
             </div>
           </div>
